// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChromeNavItemFactory should render chrome expandable nav item 1`] = `
<div>
  <div>
    <li
      class="pf-v6-c-nav__item"
      data-ouia-component-id="OUIA-Generated-NavExpandable-:r2:"
      data-ouia-component-type="PF6/NavExpandable"
      data-ouia-safe="true"
      data-quickstart-id="bar"
    >
      <button
        aria-expanded="false"
        class="pf-v6-c-nav__link"
        id="test-id"
      >
        bar
        <span
          class="pf-v6-c-nav__toggle"
        >
          <span
            class="pf-v6-c-nav__toggle-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 20 20"
              width="1em"
            >
              <path
                d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
              />
            </svg>
          </span>
        </span>
      </button>
      <section
        aria-labelledby="test-id"
        class="pf-v6-c-nav__subnav"
        hidden=""
        inert=""
      >
        <ul
          class="pf-v6-c-nav__list"
          role="list"
        >
          <li
            class="pf-v6-c-nav__item chr-c-navigation__item"
            data-ouia-component-id="Foo"
            data-ouia-component-type="PF6/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v6-c-nav__link chr-c-navigation__item"
              data-quickstart-id="foo"
              data-testid="router-link"
              href="/foo"
              itemid="/foo"
            >
              <span
                class="pf-v6-c-nav__link-text"
              >
                Foo
                 
              </span>
            </a>
          </li>
        </ul>
      </section>
    </li>
  </div>
</div>
`;

exports[`ChromeNavItemFactory should render chrome group nav item 1`] = `
<div>
  <div>
    <section
      aria-labelledby="group"
      class="pf-v6-c-nav__section chr-c-section-nav"
    >
      <h2
        class="pf-v6-c-nav__section-title"
        id="group"
      >
        <div>
          group
        </div>
      </h2>
      <ul
        class="pf-v6-c-nav__list chr-c-section-nav"
        role="list"
      />
    </section>
  </div>
</div>
`;

exports[`ChromeNavItemFactory should render chrome nav item 1`] = `
<div>
  <div>
    <li
      class="pf-v6-c-nav__item chr-c-navigation__item"
      data-ouia-component-id="Foo"
      data-ouia-component-type="PF6/NavItem"
      data-ouia-safe="true"
    >
      <a
        class="pf-v6-c-nav__link chr-c-navigation__item"
        data-quickstart-id="foo"
        data-testid="router-link"
        href="/foo"
        itemid="/foo"
      >
        <span
          class="pf-v6-c-nav__link-text"
        >
          Foo
           
        </span>
      </a>
    </li>
  </div>
</div>
`;
